--- a/templates/calendar/_form.html.twig
+++ b/templates/calendar/_form.html.twig
@@ -52,20 +52,23 @@
             </div>
 
             <div class="row">
-                <div class="col md-4">
+                <div class="col md-6">
                     {{ form_row(form.customer) }}
                 </div>
-                <div class="col md-4">
+                <div class="col md-6">
                     {{ form_row(form.supplier) }}
-                </div>
-                <div class="col md-4">
-                    {{ form_row(form.platform) }}
                 </div>
             </div>
             <div class="row">
                 <div class="col md-6">
                     {{ form_row(form.description) }}
                 </div>
+                <div class="col md-6">
+                    {{ form_row(form.platform) }}
+                </div>
+                
+            </div>
+            <div class="row">
                 <div class="col md-6">
                     {{ form_row(form.comment) }}
                 </div>
